--- a/3DViewerApp/app/CMakeLists.txt
+++ b/3DViewerApp/app/CMakeLists.txt
@@ -2,8 +2,18 @@ cmake_minimum_required(VERSION 3.10)
 project(3DViewerAppExecutable)
 
 # Set the include directories for the app module
+set(APP_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(APP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_executable(3DViewerApp src/main.cpp)
+
+add_executable(3DViewerApp ${APP_SRC_DIR}/main.cpp
+        ${APP_SRC_DIR}/imgui.cpp
+        ${APP_SRC_DIR}/imgui_impl_glfw.cpp
+        ${APP_SRC_DIR}/imgui_impl_opengl3.cpp
+        ${APP_SRC_DIR}/imgui_widgets.cpp
+        ${APP_SRC_DIR}/imgui_draw.cpp
+        ${APP_SRC_DIR}/imgui_tables.cpp
+        ${APP_SRC_DIR}/imgui_demo.cpp)
 
 include_directories(${APP_INCLUDE_DIR})
 
