--- a/zyxDiveApp/app/CMakeLists.txt
+++ b/zyxDiveApp/app/CMakeLists.txt
@@ -6,14 +6,7 @@ set(APP_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(APP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 
-add_executable(${PROJECT_NAME} ${APP_SRC_DIR}/main.cpp
-        ${APP_SRC_DIR}/imgui.cpp
-        ${APP_SRC_DIR}/imgui_impl_glfw.cpp
-        ${APP_SRC_DIR}/imgui_impl_opengl3.cpp
-        ${APP_SRC_DIR}/imgui_widgets.cpp
-        ${APP_SRC_DIR}/imgui_draw.cpp
-        ${APP_SRC_DIR}/imgui_tables.cpp
-        ${APP_SRC_DIR}/imgui_demo.cpp)
+add_executable(${PROJECT_NAME} ${APP_SRC_DIR}/main.cpp include/Event.h include/MouseEvent.h include/KeyEvent.h)
 
 include_directories(${APP_INCLUDE_DIR})
 
